clusters/cluster/apps/homeassistant/zwave-js/service-zwave-js.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave-js-ui
  namespace: apps
spec:
  selector:
    app: zwave-js-ui
  ports:
    - name: ui
      port: 8091
      targetPort: 8091
    - name: ws
      port: 3000
      targetPort: 3000
  type: ClusterIP
